--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+/* {
+  border: solid white 1px;
+} */
 a {
   font-weight: 500;
   color: #646cff;
@@ -22,7 +24,8 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+body { display: flex;
+  justify-content: center;
   margin: 0;
   display: flex;
   place-items: center;
@@ -65,4 +68,68 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+input {
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 1px solid #646cff;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: rgba(255, 255, 255, 0.87);
+  transition: border-color 0.25s, background-color 0.25s;
+  width: 100%; /* Asegura que los inputs ocupen todo el espacio disponible */
+}
+
+input:focus {
+  border-color: #535bf2;
+  outline: none; /* Elimina el borde predeterminado del navegador */
+}
+
+input::placeholder {
+  color: rgba(255, 255, 255, 0.6); /* Color más suave para los placeholders */
+}
+
+input:hover {
+  border-color: #535bf2;
+}
+
+input:disabled {
+  background-color: #333;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: not-allowed;
+}
+textarea {
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 1px solid #646cff;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: rgba(255, 255, 255, 0.87);
+  transition: border-color 0.25s, background-color 0.25s;
+  width: 100%; /* Asegura que el textarea ocupe todo el ancho disponible */
+  min-height: 150px; /* Altura mínima para el textarea */
+  resize: vertical; /* Permite al usuario cambiar la altura del textarea */
+}
+
+textarea:focus {
+  border-color: #535bf2;
+  outline: none; /* Elimina el borde predeterminado del navegador */
+}
+
+textarea::placeholder {
+  color: rgba(255, 255, 255, 0.6); /* Color más suave para los placeholders */
+}
+
+textarea:hover {
+  border-color: #535bf2;
+}
+
+textarea:disabled {
+  background-color: #333;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: not-allowed;
 }
